# ida-multi-mcp

./: README.md  README.zh-CN.md  pyproject.toml
docs/ida-pro-mcp/: comparison.md
docs/plans/: mcp-tool-improvement.md
src/ida_multi_mcp/: __main__.py  ida_tool_schemas.json  idalib_manager.py  idalib_worker.py  registry.py  router.py  server.py
src/ida_multi_mcp/ida_mcp/: __init__.py  api_analysis.py  api_composite.py  api_core.py  api_debug.py  api_modify.py  api_python.py  api_stack.py  api_survey.py  api_types.py  api_yara.py  http.py  rpc.py  utils.py
src/ida_multi_mcp/ida_mcp/signatures/: crypto.yar
src/ida_multi_mcp/ida_mcp/zeromcp/: mcp.py
src/ida_multi_mcp/plugin/: ida_multi_mcp.py
src/ida_multi_mcp/tools/: __init__.py  idalib.py  management.py
tests/: test_api_python.py  test_architecture_fixes.py  test_ida_mcp_worker_server.py  test_idalib_manager.py  test_lazy_cache_init.py  test_management.py  test_plugin_headless_detection.py  test_registry.py  test_router.py  test_router_requires_instance_id.py  test_server_integration.py  test_survey_binary.py  test_utils_pure.py  test_yara_scan.py
